# CBS_401

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_FIRST.md  cbs_hotspot.html  cbs_parallel_report.html  searchGraph.dot
.devcontainer/: Dockerfile  devcontainer.json  getPythonReqs.sh  requirements.txt
.github/workflows/: cmake-multi-platform.yml
distributed/: Dockerfile  example.md  general_setup.md
include/: common.cpp  common.hpp  dynamic_hungarian_assignment.hpp
include/CBS/: CBS.cpp  CBS.hpp  CBSNode.cpp  CBSNode.hpp  main_CBS.cpp
include/CBS_distributed/: CBS.cpp  CBS.hpp  CBSNode.hpp  main_CBS.cpp
include/CBS_parallel/: CBS.hpp  CBSNode.cpp  CBSNode.hpp  CBSNode_parallel.cpp  CBSNode_parallel.hpp  CBS_parallel.cpp  CBS_parallel.hpp  main_CBS_parallel.cpp
include/ECBS/: ECBS.cpp  ECBS.hpp  ECBSNode.cpp  ECBSNode.hpp  main_ECBS.cpp
include/ECBS_distributed/: ECBS.cpp  ECBS.hpp  ECBSNode.cpp  ECBSNode.hpp  main_ECBS.cpp
include/ECBS_parallel/: ECBS.cpp  ECBSNode.hpp  ECBSNode_parallel.cpp  ECBSNode_parallel.hpp  ECBS_parallel.cpp  ECBS_parallel.hpp  main_ECBS_parallel.cpp
map_file/: debug_cbs_data.yaml  debug_data.yaml
outputs/den312d_040_ECBSP/den312d_040_p_w=1.00/ECBS_parallel/: den312d_agents_20_test_0.yaml  den312d_agents_20_test_12.yaml  den312d_agents_20_test_15.yaml  den312d_agents_20_test_18.yaml  den312d_agents_20_test_6.yaml  den312d_agents_30_test_7.yaml
outputs/random_32_32_w=1.00/ECBS/: random-32-32-10_agents_100_test_10.yaml  random-32-32-10_agents_100_test_13.yaml  random-32-32-10_agents_100_test_14.yaml  random-32-32-10_agents_100_test_5.yaml  random-32-32-10_agents_10_test_1.yaml  random-32-32-10_agents_10_test_15.yaml  random-32-32-10_agents_10_test_5.yaml  random-32-32-10_agents_10_test_6.yaml  random-32-32-10_agents_110_test_15.yaml  random-32-32-10_agents_110_test_9.yaml  random-32-32-10_agents_130_test_19.yaml  random-32-32-10_agents_30_test_1.yaml  random-32-32-10_agents_30_test_17.yaml  random-32-32-10_agents_30_test_3.yaml  random-32-32-10_agents_30_test_7.yaml  random-32-32-10_agents_40_test_0.yaml  random-32-32-10_agents_40_test_1.yaml  random-32-32-10_agents_40_test_19.yaml  random-32-32-10_agents_40_test_3.yaml  random-32-32-10_agents_50_test_0.yaml  random-32-32-10_agents_50_test_19.yaml  random-32-32-10_agents_50_test_4.yaml  random-32-32-10_agents_70_test_3.yaml  random-32-32-10_agents_80_test_9.yaml  random-32-32-10_agents_90_test_0.yaml  random-32-32-10_agents_90_test_19.yaml
profiling/: ECBS_Averages  ECBS_Parallel_Averages  generate_profile_graph.py  plot_profile_graph.py
profiling/vtune_reports/: cbs_parallel_hotspots.html  cbs_parallel_report.html  cbs_report.html  desktop.ini  ecbs_parallel_hotspot.html  ecbs_parallel_report.html  ecbs_report.html
protos/: cbs.pb.cc  cbs.pb.h  cbs.proto  cbs_node.pb.cc  cbs_node.pb.h  cbs_node.proto  ecbs.pb.cc  ecbs.pb.h  ecbs.proto  ecbs_node.pb.cc  ecbs_node.pb.h  ecbs_node.proto
python/: compareTYM2TA.py  generate_data_for_exp2.py  generate_profile_data.py  parse_results_and_compare_ECBS_vs_ECBSP.ipynb  plot_profile_graph.py
run_script/: extract_and_visualize.py  run.py
run_test2/: single_exp1_e.sh  single_exp2_e.sh
(+7841 files in other folders)
